<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:id="@+id/nameTextEdit">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal" android:id="@+id/amountTextEdit"/>


    <LinearLayout 
    	android:id="@+id/linearLayout1" 
    	android:layout_height="wrap_content" 
    	android:layout_width="match_parent">

	    <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/add" android:id="@+id/addButton"/>

	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content" 
	    	android:text="@string/clean" android:id="@+id/cleanButton"/>
	    	
	    <Button 
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content" 
	    	android:text="@string/calculate" android:id="@+id/calculateButton"/>
    
    </LinearLayout>


    <TextView
        android:id="@+id/tagNombreMonto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nombre - Monto"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
	<ListView android:id="@+id/mylistview"
	   android:layout_width="fill_parent"
	   android:layout_height="fill_parent">
	</ListView> 
            
    <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >
        <TableRow>
        <TextView
            android:layout_column="1"
            android:text="Total"
            android:padding="3dip" />
        <TextView
            android:text=""
            android:gravity="right"
            android:padding="3dip" />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_column="1"
            android:text="Monto por persona"
            android:padding="3dip" />
        <TextView
            android:text=""
            android:gravity="right"
            android:padding="3dip" />
    </TableRow>
    </TableLayout>

</LinearLayout>